--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ReservationDB": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=reservations"
+    "ReservationContext": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=reservations"
   }
 }
 
